@@ -102,7 +102,7 @@
 
 typedef struct {
 	char *name, *ext, *ext2;
-	guint32 flags;
+	unsigned int flags;
 } fformat;
 
 fformat file_formats[NUM_FTYPES];
@@ -141,7 +141,8 @@ int load_mem_image(unsigned char *buf, int len, int mode, int ftype);
 // !!! The only allowed mode for now is FS_LAYER_LOAD
 int load_frameset(frameset *frames, int ani_mode, char *file_name, int mode,
 	int ftype);
-int explode_frames(char *dest_path, int ani_mode, char *file_name, int ftype);
+int explode_frames(char *dest_path, int ani_mode, char *file_name, int ftype,
+	int desttype);
 
 int export_undo(char *file_name, ls_settings *settings);
 int export_ascii ( char *file_name );
